# crawlers-tax-policy-data

./: .gitignore  README.md  pyproject.toml
docs/: develop.md
src/crawlers_tax_policy_data/: cmdline.py  manage.py
src/crawlers_tax_policy_data/config/: __init__.py  settings.yml
src/crawlers_tax_policy_data/example/: beijing1.py  guangdong.py  shanghai.py  青岛税务局.py
src/crawlers_tax_policy_data/repositories/: mongo.py  redis.py
src/crawlers_tax_policy_data/spider/: base.py  bj_gov.py  cbirc.py  chinatax_gov.py  csrc.py  gd_gov_doc_lib.py  gd_gov_latest_policy.py  gov.py  gz_gov.py  js_gov.py  miit.py  mof.py  ndrc.py  neimenggu.py  nmpa.py  pbc.py  pudong_gov.py  safe_gov.py  samr.py  sc_bmgfxwj.py  sc_gov.py  sc_newzfwj.py  shanghai_gov.py  shenzhen.py  shui5.py  sz_gov.py  zhejiang_gov.py
src/crawlers_tax_policy_data/storage/: local.py
src/crawlers_tax_policy_data/tax_spider/: base.py  changsha.py
src/crawlers_tax_policy_data/utils/: log.py  seed.py  utils.py
tests/spider/: pudong.py  shenzhen.py  test_gov.py  test_neimenggu.py  test_sz_gov.py
tests/tax_spider/: test_changsha.py
