[tool.poetry]
name = "crawlers-tax-policy-data"
version = "0.1.0"
description = ""
authors = ["terry <terry@ppx.asia>"]
readme = "README.md"
packages = [{include = "crawlers_tax_policy_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
pandas = "^2.2.2"
pymongo = "^4.6.3"
aioredis = "^2.0.1"
playwright = "^1.43.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
openpyxl = "^3.1.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.13.2"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
