[tool.poetry]
name = "crawlers-tax-policy-data"
version = "1.0.0"
description = "Get the specified field data of public announcements in the government affairs platform"
authors = ["Terry <17601306065@163.com>"]
readme = "README.md"
packages = [{ include = "crawlers_tax_policy_data", from = "src" }]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
pandas = "^2.2.2"
pymongo = "^4.6.3"
aioredis = "^2.0.1"
playwright = "^1.43.0" # `playwright install` (Please run the following command to download new browsers)
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
openpyxl = "^3.1.2"
httpx = "^0.27.0"
click = "^8.1.7"
asyncio = "^3.4.3"
h11 = "^0.14.0"


[tool.poetry.group.dev.dependencies]
# User the `--group dev` argument add development dependency
pytest = "^8.1.1"
isort = "^5.13.2"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = [
    "too-many-instance-attributes",
    "broad-except",
    "too-few-public-methods",
    "unused-argument",
    "no-name-in-module",
    "fixme",
    "duplicate-code",
    "arguments-differ",
    "line-too-long",
    "logging-too-many-args"
]
good-names = [
    "pattern"
]
extension-pkg-allow-list = [
    "lxml",
]
ignore-paths = [
    "src/crawlers_tax_policy_data/example/.*",
    "src/crawlers_tax_policy_data/repositories/.*",
]

[tool.pylint.design]
max-line-length = 130
max-args = 11
max-attributes = 10
min-public-methods = 1
